Div 2 alignment fixed, game board set up

--- a/styles/main.css
+++ b/styles/main.css
@@ -114,7 +114,7 @@ a:hover .label {
 .label {
   position: absolute;
   top: 0.5rem;
-  right: 3rem;
+  right: 2rem;
   opacity: 0;
   transform: translateX(1rem);
   transition: all 300ms;
@@ -183,13 +183,31 @@ header {
 
 /*Div 2 styling */
 #ralph-hello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 #ralph-image {
+  display: flex;
+  justify-content: center;
   align-items: flex-end;
+}
+
+#ralph-image > img {
+  width: 55%;
+  height: 80%;
+  /* max-height: 100%;
+  height: 100%;
+  object-fit: contain; */
+}
+
+#ralph-hello-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#ralph-hello-body p {
+  max-width: 50ch;
 }
 
 /* Div 3 styling */
@@ -204,6 +222,65 @@ header {
   max-width: 75%;
   margin: 0 auto;
 }
+
+#introduction-body > p,
+h2,
+h3 {
+  text-align: center;
+}
+
+#introduction-body > button,
+a {
+  display: flex;
+  align-items: center;
+}
+
+/* Div 4 styling */
+#game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-board {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 120px 120px 120px 120px;
+  grid-template-rows: 120px 120px 120px 20px;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #d3ded5;
+  border-radius: 10px;
+  margin: 5px;
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.5);
+}
+
+.box:hover {
+  transform: translateX(-0.1rem) translateY(-0.1rem);
+}
+
+/* Div 5 styling */
+#how-to-help {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Div 6 styling */
+#sources {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #sources {
   width: 100vw;
   max-width: 100%;
